k8_deployment/deployment-svc-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techdome-frontend
  labels:
    name: techdome-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      name: techdome-frontend
  template:
    metadata:
      name: techdome-frontend
      labels:
        name: techdome-frontend
    spec:
      containers:
        - name:  techdome-frontend
          image: murali90102/techdome-frontend:1
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: techdome-frontend
  labels:
    name: techdome-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: techdome-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressClassName: nginx
    ingress.kubernetes.io/rewrite-target: /
  name: techdome-frontend
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techdome-frontend
            port: 
              number: 80
